# s3-like-yazi

./: Cargo.toml  LICENSE  README.md  research.md
src/: credentials.rs  main.rs  s3_client.rs
src/app/: delete.rs  download.rs  indexing.rs  local_fs.rs  mod.rs  navigation.rs  preview.rs  search.rs
src/ui/: local_fs.rs  mod.rs  popups.rs  render.rs  status.rs
