[package]
name = "yazi-like-s3"
version = "0.1.0"
edition = "2024"
description = "TUI file explorer for MinIO/S3 compatible storage"

[dependencies]
# S3 Client
aws-sdk-s3 = "1"

# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
dirs = "6"
chrono = "0.4"
humansize = "2"
anyhow = "1"
