[package]
name = "s3-like-yazi"
version = "0.3.0"
edition = "2024"
description = "A blazing-fast terminal file manager for S3-compatible storage, inspired by Yazi"
license = "MIT"
repository = "https://github.com/bobir01/s3-like-yazi"
homepage = "https://github.com/bobir01/s3-like-yazi"
readme = "README.md"
keywords = ["s3", "minio", "tui", "file-manager", "terminal"]
categories = ["command-line-utilities"]
exclude = ["*.mp4", "*.mcap", ".DS_Store"]

[dependencies]
# S3 Client
aws-sdk-s3 = "1"

# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Async Runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "process"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["std"] }
humansize = "2"
anyhow = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
